# scim-services

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE.txt  README.md  Tiltfile  docker-compose.yaml  pyproject.toml  renovate.json5  requirements.txt  run_e2e_tests.sh  run_scim_tester.sh  run_with_nubus.sh  sonar-project.properties  tilt-values.yaml
docker/scim-client/: Dockerfile
docker/scim-consumer/: Dockerfile  test-entrypoint.sh
docker/scim-dev-server/: Dockerfile  requirements.txt  scim-server-resource-types.json  scim-server-schemas.json
docker/scim-server/: Dockerfile  activate_venv.envsh  create_ldap_attributes.py  scim-server-entrypoint.sh  test-entrypoint.sh
docs/: README.md  python-scim-server-test.md  udm-scim-mapping.md
docs/architecture/: Nubus-SCIM-service-architecture.md  docker-compose.yaml  mermaid2png  milestone1-old.md  milestone1.md  milestone2.1.md  milestone2.md  milestone3.md
docs/architecture/images/: components.drawio  sequence-ms1-old-scim-write.mermaid  sequence-ms1-scim-read.mermaid  sequence-ms1-scim-write.mermaid  sequence-ms123-udm-read.mermaid  sequence-ms2-scim-write.mermaid  (+6 more)
helm/: docker-compose.yaml
helm/scim-client/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
helm/scim-consumer/: Chart.yaml  README.md  linter_values.yaml  values.yaml
helm/scim-dev-server/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
helm/scim-server/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
scim-client/: README.md  pyproject.toml
scim-client/tests/: conftest.py  docker-compose.yaml
scim-consumer/: README.md  pyproject.toml
scim-consumer/src/univention/scim/consumer/: authentication.py  group_membership_resolver.py  helper.py  main.py  message_handler.py  pretty_print.py  scim_client.py  scim_consumer.py  scim_consumer_settings.py
scim-consumer/tests/: base-defaults.conf  conftest.py  create-provisioning.sh  docker-compose-univention-scim.yaml  docker-compose.yaml  nats.dev.conf  prov-subscription.json  pytest.ini  run-tests.sh  test_main.py  thread.py
scim-consumer/tests/conf/: base-defaults-scim-server.conf  base-defaults.conf  base-scim-server.conf  base.conf  scim-server-resource-types.json  scim-server-schemas.json
scim-consumer/tests/data/: provisioning_message_factory.py  scim_helper.py  udm_helper.py
scim-consumer/tests/integration/: conftest.py  test_filter.py  test_group_membership_resolver.py  test_groups.py  test_main.py  test_oidc_authentication.py  test_univention_scim_server.py
scim-consumer/tests/unit/: test_authentication.py  test_message_handler.py  test_should_exist.py  test_transaction_type.py
scim-server/: README.md  pyproject.toml
scim-server/helm/: .helmignore  Chart.yaml  README.md
scim-server/performance/: MS1-performance.md  test_performance.py
scim-server/src/univention/scim/server/: config.py  configure_logging.py  container.py  fast_api_auth_adapter.py  main.py
scim-server/src/univention/scim/server/authn/: __init__.py  authn.py  authn_impl.py  fast_api_adapter.py  oidc_configuration.py  oidc_configuration_impl.py
scim-server/src/univention/scim/server/authz/: __init__.py  authz.py  authz_impl.py
scim-server/src/univention/scim/server/domain/: __init__.py  crud_scim.py  group_service.py  group_service_impl.py  patch_mixin.py  user_service.py  user_service_impl.py  utils.py
scim-server/src/univention/scim/server/domain/repo/: __init__.py  container.py  crud_manager.py  crud_scim_impl.py
scim-server/src/univention/scim/server/domain/repo/udm/: __init__.py  crud_db.py  crud_udm.py  udm_id_cache.py
scim-server/src/univention/scim/server/domain/rules/: __init__.py  action.py  disaplay_name.py  display_name.py  empty_password.py  evaluate.py  loader.py  rule.py
scim-server/src/univention/scim/server/interfaces/: authenticator.py  config.py
scim-server/src/univention/scim/server/middlewares/: content_type.py  request_logging.py  timing.py
scim-server/src/univention/scim/server/model_service/: __init__.py  group.py  load_schemas.py  load_schemas_impl.py  scim2udm.py  udm.py  udm2scim.py  user.py
scim-server/src/univention/scim/server/model_service/extensions/: univention_user.py
scim-server/src/univention/scim/server/models/: group.py  types.py  user.py
scim-server/src/univention/scim/server/models/extensions/: customer1_user.py  univention_group.py
scim-server/src/univention/scim/server/rest/: __init__.py  api.py  error_handler.py  groups.py  id.py  resource_type.py  schema.py  service_provider.py  users.py
scim-server/tests/: base-defaults.conf  base.conf  conftest.py  docker-compose.yml  test_api.py  test_api_authn.py  test_architecture.py  test_auth.py  test_authn.py  test_crud_manager_integration.py  test_crud_udm.py  test_e2e.py  test_id_cache.py  test_main.py  test_members_mapping.py  test_oicd_authn.py
scim-server/tests/e2e/: test_create.py  test_delete.py  test_patch.py  test_read.py  test_update.py
scim-server/tests/helpers/: allow_all_authn.py  mock_udm.py  udm_client.py
scim-server/tests/middlewares/: test_content_type_middleware.py  test_request_logging_middleware.py  test_timing_middleware.py
scim-server/tests/unit/: test_api_authn.py  test_architecture.py  test_content_type_integration.py  test_crud_manager_integration.py  test_external_id_filtering.py  test_group.py  test_group_mapping.py  test_id_api.py  test_id_cache.py  test_main.py  test_members_mapping.py  test_oidc_auth.py  test_resource_type.py  test_schema.py  test_service_provider_config.py  test_user.py  test_user_mapping.py
scim-udm-transformer-lib/: pyproject.toml
scim-udm-transformer-lib/src/univention/scim/transformation/: exceptions.py  id_cache.py  scim2udm.py  udm2scim.py
scim-udm-transformer-lib/tests/: conftest.py  test_udm2scim.py
scripts/: run_scim_client_tests.sh  run_scim_consumer_tests.sh  run_scim_server_tests.sh  run_scim_tester.sh  run_with_nubus.sh
tests/helm/: test_helm_deployment.py
udm-to-scim-sync/: pyproject.toml
(+76 files in other folders)
