[project]
name = "scim-services"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lancelog>=0.1.0",
]
authors = [{ name = "Univention GmbH", email = "packages@univention.de" }]
license = "AGPL-3.0-only"

[tool.uv.sources]
scim-server = { workspace = true }
scim-udm-transformer-lib = { workspace = true }
scim-consumer = { workspace = true }
lancelog = { index = "gitlab" }
helm-test-harness = { index = "common-helm" }
pytest-helm = { index = "common-helm" }

[tool.uv.workspace]
members = [
    "scim-server",
    "scim-udm-transformer-lib",
    "scim-consumer",
]

[[tool.uv.index]]
name = "gitlab"
url = "https://git.knut.univention.de/api/v4/projects/1449/packages/pypi/simple"  # lancelog
explicit = true
default = false

[[tool.uv.index]]
name = "common-helm"
url = "https://git.knut.univention.de/api/v4/projects/829/packages/pypi/simple"  # common-helm
explicit = true
default = false

### linters ###

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
pretty = true
python_version = "3.11"
strict = true
# mypy does not like ABC abstract classes so force allow subclassing from them
disallow_subclassing_any = false

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
lines-after-imports = 2
known-first-party = ["helpers", "univention.scim"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "helm-test-harness>=0.21.0",
    "pytest-helm>=0.21.0"
]
