[project]
name = "scim-consumer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "udm-rest-api-client[async]>=0.0.2",
    "scim-udm-transformer-lib>=0.1.0",
    "scim-server>=0.1.0",
    "nubus-provisioning-consumer>=0.53.0",
    "scim2-client[httpx]>=0.5.1",
    "scim2-tester>=0.1.14",
    "icecream>=2.1.4",
    "udm-rest-api-client>=0.0.2",
    "ldap3>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "requests>=2.32.3",
    "faker>=37.3.0",
]

[tool.uv.sources]
nubus-provisioning-consumer = { index = "univention" }
scim-udm-transformer-lib = { workspace = true }
scim-server = { workspace = true }

[[tool.uv.index]]
name = "univention"
url = "https://git.knut.univention.de/api/v4/projects/882/packages/pypi/simple"

[tool.uv]
package = true

[project.scripts]
scim-consumer = "univention.scim.consumer.main:run"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
env = [
    "D:SCIM_SERVER_BASE_URL = http://localhost:8888/",
    "D:PROVISIONING_API_BASE_URL = http://localhost:7777/",
    "D:PROVISIONING_API_USERNAME = scim-consumer",
    "D:PROVISIONING_API_PASSWORD = univention",
    "D:PROVISIONING_API_ADMIN_USERNAME = admin",
    "D:PROVISIONING_API_ADMIN_PASSWORD = provisioning",
    "D:LOG_LEVEL = INFO",
    "D:MAX_ACKNOWLEDGEMENT_RETRIES = 10",
    "D:UDM_BASE_URL = http://localhost:9979/udm/",
    "D:UDM_USERNAME = cn=admin",
    "D:UDM_PASSWORD = univention",
    "D:LDAP_URL = localhost",
    "D:LDAP_BASE_DN = dc=univention-organization,dc=intranet",
    "D:LDAP_USERNAME = cn=admin,dc=univention-organization,dc=intranet",
    "D:LDAP_PASSWORD = univention"
]
addopts = "-lvv --cov --cov-report term-missing --junit-xml=/tmp/pytest-junit.xml"

[tool.coverage.run]
data_file = "/tmp/scim-coverage"
relative_files = true

[tool.coverage.xml]
output = "/tmp/scim-coverage.xml"
