[project]
name = "scim-consumer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "udm-rest-api-client[async]>=0.0.2",
    "scim-udm-transformer-lib>=0.1.0",
    "scim-server>=0.1.0",
    "nubus-provisioning-consumer>=0.53.0",
    "scim2-client[httpx]>=0.5.1",
    "scim2-tester>=0.1.14",
    "icecream>=2.1.4",
    "udm-rest-api-client>=0.0.2",
    "ldap3>=2.9.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "requests>=2.32.3",
    "faker>=37.3.0",
    "python-keycloak>=5.6.0",
]

[tool.uv.sources]
nubus-provisioning-consumer = { index = "univention" }
scim-udm-transformer-lib = { workspace = true }
scim-server = { workspace = true }

[[tool.uv.index]]
name = "univention"
url = "https://git.knut.univention.de/api/v4/projects/882/packages/pypi/simple"

[tool.uv]
package = true

[project.scripts]
scim-consumer = "univention.scim.consumer.main:run"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
env = [
    "D:SCIM_SERVER_BASE_URL = http://localhost:8888/v2/",
    "D:PROVISIONING_API_BASE_URL = http://localhost:7777/",
    "D:PROVISIONING_API_USERNAME = scim-consumer",
    "D:PROVISIONING_API_PASSWORD = univention",
    "D:PROVISIONING_API_ADMIN_USERNAME = admin",
    "D:PROVISIONING_API_ADMIN_PASSWORD = provisioning",
    "D:LOG_LEVEL = INFO",
    "D:MAX_ACKNOWLEDGEMENT_RETRIES = 10",
    "D:UDM_BASE_URL = http://localhost:9979/udm/",
    "D:UDM_USERNAME = cn=admin",
    "D:UDM_PASSWORD = univention",
    "D:LDAP_HOST = localhost",
    "D:LDAP_BIND_DN = cn=admin,dc=univention-organization,dc=intranet",
    "D:LDAP_BIND_PASSWORD = univention",
    "D:EXTERNAL_ID_USER_MAPPING = univentionObjectIdentifier",
    "D:EXTERNAL_ID_GROUP_MAPPING = univentionObjectIdentifier",
    "D:SCIM_OIDC_AUTHENTICATION = false",
    "D:KEYCLOAK_BASE_URL = http://localhost:5050",
    #
    # Configuration for tests with Univention SCIM-Server
    #   To run the tests locally pytest must be run with:
    #     UNIVENTION_SCIM_SERVER=true pytest ...
    #
    "D:DOWNSTREAM_UDM_BASE_URL = http://localhost:9999/udm/",
    "D:DOWNSTREAM_UDM_USERNAME = cn=admin",
    "D:DOWNSTREAM_UDM_PASSWORD = univention",
]
addopts = "-lvv --cov --cov-report term-missing --junit-xml=/tmp/pytest-junit.xml"

[tool.coverage.run]
data_file = "/tmp/scim-coverage"
relative_files = true

[tool.coverage.xml]
output = "/tmp/scim-coverage.xml"
