[project]
name = "scim-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "uvicorn>=0.34.0",
    "lancelog>=0.1.0",
    "scim2-models>=0.3.2",
    "pydantic>=2.10.6",
]

[tool.uv.sources]
scim-udm-transformer-lib = { path = "../scim-udm-transformer-lib" }
lancelog = { index = "gitlab" }

[[tool.uv.index]]
name = "gitlab"
url = "https://git.knut.univention.de/api/v4/projects/1449/packages/pypi/simple"  # lancelog
explicit = true
default = false











[project.scripts]
scim-server = "univention.scim.server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
pythonpath = [".", "tests"]
