[project]
name = "scim-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
    "lancelog>=0.1.0",
    "scim2-models>=0.3.2",
    "pydantic>=2.10.6",
    "dependency-injector>=4",
    "requests>=2.32.3",
    "jwcrypto>=1.5.6",
    "udm-rest-api-client[async]==0.0.4",
    "scim-udm-transformer-lib",
    "requests>=2.32.3",
    "asgi-correlation-id>=4.3.4",
]

[dependency-groups]
dev = [
    "faker>=37.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-httpserver>=1.1.2",
    "pytestarch>=3",
    "requests>=2.32.3",
    "requests-mock>=1.12.1",
    "respx>=0.22.0",
]

[tool.uv.sources]
scim-udm-transformer-lib = { workspace = true }
lancelog = { index = "gitlab" }
udm-rest-api-client = { index = "univention" }

[[tool.uv.index]]
name = "gitlab"
url = "https://git.knut.univention.de/api/v4/projects/1449/packages/pypi/simple"  # lancelog
explicit = true
default = false

[[tool.uv.index]]
name = "univention"
url = "https://git.knut.univention.de/api/v4/projects/1155/packages/pypi/simple"  # udm-rest-api-client
explicit = true
default = false

[project.scripts]
scim-server = "univention.scim.server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
pythonpath = [".", "tests"]
asyncio_mode = "auto"
